# python-awesome

./: .envrc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  tasks.py
certifi/: .envrc  .gitignore  pyproject.toml
jupyterlab/: .gitignore  check_environment_1.ipynb  tasks.py
jupyterlab/jupyterlab_kite/: .envrc  tasks.py
jupyterlab/jupyterlab_matplotlib/: .envrc  README.md  build.ninja  maskfile.md  matplotlib.ipynb  matplotlib.md  tasks.py
jupyterlab/jupyterlab_pandas/: README.md  build.ninja  maskfile.md  pandas.ipynb  pandas.md  tasks.py
jupyterlab/jupyterlab_pre_commit/: .envrc  README.md  build.ninja  maskfile.md
jupyterlab/pandas/: .envrc  pandas.ipynb  tasks.py
