[project]
name = ""
version = ""
description = ""
authors = [
    {name = "胡争辉", email = "hu@daonao.com"},
]
dependencies = [
    "certifi~=2021.5",
    "httpie~=2.4"]
requires-python = ">=3.9.6"
dynamic = ["classifiers"]

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
sync = "pdm sync"
httpie-google = {call = "httpie.core:main(['', 'https://google.com/'])"}
merge-cert = {shell = "cat \"$(pdm run python -m certifi)\" \"${CUSTOM_CERT_FILE}\" > ./cert/cacert.pem "}
[tool.pdm.scripts.httpie-google-with-cert]
call = "httpie.core:main(['', 'https://google.com/'])"
env = {SSL_CERT_FILE = "./cert/cacert.pem", REQUESTS_CA_BUNDLE = "./cert/cacert.pem"}